core: fix themedir processing in the configure script

--- a/core/configure.ac
+++ b/core/configure.ac
@@ -320,8 +320,8 @@ AC_SUBST([elibdir])
 
 AC_ARG_WITH([themedir],
   AS_HELP_STRING([--with-themedir=DIR], [splash theme directory @<:@ESPREFIX/etc/splash@:>@]),
-  [elibdir="${withval}"],
-  [elibdir="\$(essential_prefix)/etc/splash"]
+  [themedir="${withval}"],
+  [themedir="\$(essential_prefix)/etc/splash"]
 )
 AC_SUBST([themedir])
 
