gentoo: look for libfbsplash.so both in core/ and core/objs/

--- a/gentoo/Makefile
+++ b/gentoo/Makefile
@@ -3,9 +3,9 @@
 
 LIB		?= lib
 CFLAGS 	+= -g -Wall
-LDFLAGS += -L../core/objs/.libs
+LDFLAGS += -L../core/objs/.libs -L../core/.libs
 
-INCLUDES = -I../core/objs
+INCLUDES = -I../core/objs -I../core
 
 splash.so: splash.o
 	$(CC) $(LDFLAGS) -fPIC -shared -Wl,-soname,$@ $+ -o $@ -leinfo -lrc -lfbsplash
