--- a/core/scripts/splash_geninitramfs.in
+++ b/core/scripts/splash_geninitramfs.in
@@ -154,6 +154,11 @@ mkdir -p ${imgdir}/{dev,dev/fb,dev/misc,dev/vc,$themedir,lib/splash/proc,root,sb
 if [ $EUID == 0 ]; then
 	[[ ! -e "${imgdir}/dev/null" ]] 	&& mknod "${imgdir}/dev/null" c 1 3
 	[[ ! -e "${imgdir}/dev/console" ]] 	&& mknod "${imgdir}/dev/console" c 5 1
+	[[ ! -e "${imgdir}/dev/tty0" ]]		&& mknod "${imgdir}/dev/tty0" c 4 0
+else
+	echo "Since you are running this script as a non-root user, no device nodes" 1>&2
+	echo "will be created in the initramfs.  Make sure your initramfs contains" 1>&2
+	echo "at least the following nodes: /dev/null, /dev/console, /dev/tty0." 1>&2
 fi
 
 if [ ! -e ${splash_hlp} ]; then
