core: handle both gzipped and regular cpio archives in splash_geninitramfs
Handle gzipped or regular cpio archives for appending.
Ensure the cpio archive is extracted relative to the staging dir.

--- a/core/scripts/splash_geninitramfs.in
+++ b/core/scripts/splash_geninitramfs.in
@@ -144,7 +144,7 @@ fi
 if [ "$mode" == "a" ]; then
 	printv "o Unpacking $img.."
 	cp "$img" "${imgdir}"
-	(cd "${imgdir}" ; gunzip -c $(basename $img) | cpio -idm --quiet -H newc)
+	(cd "${imgdir}"; (gunzip -c "$(basename $img)" 2>/dev/null || cat "$(basename $img)") | cpio -idm --no-absolute-filenames --quiet -H newc)
 	rm -f "${imgdir}/$(basename $img)"
 fi
 
